--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,5 @@
 <br><br>
-<div class="mx-auto justify-content-center" style="width: 500px;">
+<div class="mx-auto justify-content-center", style="width: 500px;">
 <h1>メンバー追加</h1>
 <p class="fs-4">チーム名:<%= @team.name %></p>
 <table class="table">
