--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,35 @@
 <br><br>
-<h2>アカウント作成</h2>
-
+<div class="mx-auto justify-content-center　border border-secondary" style="width: 300px;">
+<h2 class="text-center">アカウント作成</h2>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name, "氏名" %><br />
-    <%= f.text_field :name %>
+  <div class="mb-3">
+    <%= f.label :name, "氏名", class: "form-label" %>
+    <%= f.text_field :name, class: "form-control", style: "width:250px" %>
   </div>
   
-  <div class="field">
-    <%= f.label :email, "メールアドレス" %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="mb-3">
+    <%= f.label :email, "メールアドレス", class: "form-label" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", style: "width:250px" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password, "パスワード" %>
+  <div class="mb-3">
+    <%= f.label :password, "パスワード", class: "form-label" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control", style: "width:250px" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "パスワード（確認）" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="mb-3">
+    <%= f.label :password_confirmation, "パスワード（確認）", class: "form-label" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", style: "width:250px" %><br>
   </div>
 
   <div class="actions">
-    <%= f.submit "登録" %>
+    <%= f.submit "登録", class: "btn btn-primary" %>
   </div>
 <% end %>
-
 <%= render "devise/shared/links" %>
+</div>
