--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,8 +1,14 @@
 <br><br>
 <h1 class="text-center">チーム一覧</h1>
 <div class="mx-auto justify-content-center" style="width: 1200px;">
+  <div class="input-group">
+    <%= form_tag teams_path, method: :get do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "検索", :name => nil, class: 'btn btn-success',placeholder: "チーム名を入力してください" %>
+    <% end %>
+  </div>
   <table class="table">
-    <thead class="bg-info">
+    <thead>
       <tr>
         <th scope="col">#</th>
         <th scope="col">チーム名</th>
@@ -10,29 +16,52 @@
         <th scope="col">プロジェクト数</th>
         <th scope="col">作成日</th>
         <th scope="col">作成者</th>
-        <th colspan="3"></th>
+        <th colspan="4"></th>
       </tr>
     </thead>
     <tbody>
+      
       <% @teams.each do |team| %>
         <tr>
-          <th scope="row"><%= team.id %></th>
-          <td><%= team.name %></td>
-          <% if team.members.count == 0 %>
-            <td>このチームにメンバーはまだ追加していません。</td>
-            <% else %>
-            <td><%= link_to "#{team.members.count}", "/teams/#{team.id}/members" %></td>
-          <% end %>
-          <% if team.projects.count == 0 %>
+          <% if user_signed_in? %>
+            <th scope="row"><%= team.id %></th>
+            <td><%= team.name %></td>
+            <% if team.members.count == 0 %>
+              <td>このチームにメンバーはまだ追加していません。</td>
+              <% else %>
+              <td><%= link_to "#{team.members.count}", "/teams/#{team.id}/members" %></td>
+            <% end %>
             <td><%= team.projects.count %></td>
+            <td><%= team.team_create_date %></td>
+            <td><%= team.user.name %></td>
+          
+            <% if (team.user.id == current_user.id)%>
+              <td><%= link_to("メンバー追加", "/teams/#{team.id}/member_add", class: "btn btn-primary btn-sm") %></td>
+              <td><%= link_to("詳細", "/teams/#{team.id}", class: "btn btn-info btn-sm") %></td>
+              <td><%= link_to("編集", "/teams/#{team.id}/edit", class: 'btn btn-primary btn-sm') %></td>
+              <td><%= link_to("削除", "/teams/#{team.id}", class: "btn btn-danger btn-sm", method: :delete, data: {confirm: "このチーム削除しますか？"}) %></td>
             <% else %>
-            <td><%= link_to "#{team.projects.count}", "/projects" %></td>
+              <td><button disabled="disabled" class="btn btn-primary btn-sm">メンバー追加</button></td>
+              <td><%= link_to("詳細", "/teams/#{team.id}", class: "btn btn-info btn-sm") %></td>
+              <td><button disabled="disabled" class="btn btn-primary btn-sm">編集</button></td>
+              <td><button disabled="disabled" class="btn btn-danger btn-sm">削除</button></td>       
+            <% end %>
+          <% else %>
+            <th scope="row"><%= team.id %></th>
+            <td><%= team.name %></td>
+            <% if team.members.count == 0 %>
+              <td>このチームにメンバーはまだ追加していません。</td>
+              <% else %>
+              <td><%= link_to "#{team.members.count}", "/teams/#{team.id}/members" %></td>
+            <% end %>
+            <td><%= team.projects.count %></td>
+            <td><%= team.team_create_date %></td>
+            <td><%= team.user.name %></td>
+            <td><button disabled="disabled" class="btn btn-primary btn-sm">メンバー追加</button></td>
+            <td><%= link_to("詳細", "/teams/#{team.id}", class: "btn btn-info btn-sm") %></td>
+            <td><button disabled="disabled" class="btn btn-primary btn-sm">編集</button></td>
+            <td><button disabled="disabled" class="btn btn-danger btn-sm">削除</button></td>
           <% end %>
-          <td><%= team.team_create_date %></td>
-          <td>-</td>
-          <td><%= link_to("詳細", "/teams/#{team.id}", class: "btn btn-primary btn-sm") %></td>
-          <td><%= link_to("編集", "/teams/#{team.id}/edit", class: "btn btn-primary btn-sm") %></td>
-          <td><%= link_to("削除", "/teams/#{team.id}", class: "btn btn-danger btn-sm", method: :delete, data: {confirm: "このチーム削除しますか？"}) %></td>
         </tr>
       
       <% end %>
@@ -40,5 +69,6 @@
   </table>
   <div class="digg_pagination">
     <%= will_paginate @teams %> 
-  </div>
+  </div><br>
+  <%= link_to "戻る", :back, class: "btn btn-primary" %>
 </div>
