--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,27 +1,34 @@
 <br><br>
-<div class="mx-auto justify-content-center" style="width: 500px;">
-<h1>プロジェクトの情報変更</h1>
+<div class="mx-auto justify-content-center" style="width: 400px;">
+<h1 class="text-center">プロジェクトの情報変更</h1>
 <%= form_with(model: @project, local: true) do |f| %>
+  <% if @project.errors.any? %>
+    <% @project.errors.full_messages.each do |message| %>
+      <p class="fw-bold", style="color:red;"><%= message %></p>
+    <% end %>
+  <% end %>
   <div class="mb-3">
     <%= f.label :team_id, "チーム名", class: "form-label" %><br />
-    <%= f.collection_select :team_id, Team.all, :id, :name, prompt: "チーム名を選択してください", class: "form-control", style: "width:200px" %>
+    <%= f.collection_select :team_id, Team.all, :id, :name, prompt: "チーム名を選択してください", class: "form-control", style: "width:250px" %>
   </div>
   <div class="mb-3">
     <%= f.label :name, "プロジェクト名", class: "form-label" %><br />
-    <%= f.text_field :name, class: "form-control", style: "width:200px" %>
+    <%= f.text_field :name, class: "form-control", style: "width:250px" %>
   </div>
   <div class="mb-3">
     <%= f.label :description, "プロジェクト内容", class: "form-label" %><br />
-    <%= f.text_field :description, class: "form-control", style: "width:200px" %>
+    <%= f.text_area :description, class: "form-control", style: "width:250px" %>
   </div>
   <div class="mb-3">
     <%= f.label :start_date, "開始日", class: "form-label" %><br />
-    <%= f.date_field :start_date, class: "form-control", style: "width:200px" %>
+    <%= f.date_field :start_date, class: "form-control", style: "width:250px" %>
   </div>
   <div class="mb-3">
     <%= f.label :end_date, "終了日", class: "form-label" %><br />
-    <%= f.date_field :end_date, class: "form-control", style: "width:200px" %>
+    <%= f.date_field :end_date, class: "form-control", style: "width:250px" %>
   </div>
   <%= f.submit "更新", class: "btn btn-primary" %>
+  <%= link_to "戻る", :back, class: "btn btn-primary" %>
 <% end %>
+
 </div>
