--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -7,7 +7,6 @@
       <p class="fw-bold", style="color:red;"><%= message %></p>
     <% end %>
   <% end %>
-
   <div class="mb-3", style="width:250px">
     <%= f.label :team_id, "チーム名", class: "form-label" %><br />
     <%= f.collection_select :team_id, Team.all, :id, :name, prompt: "チーム名を選択してください", class: "form-select"%>
@@ -18,7 +17,7 @@
   </div>
   <div class="mb-3">
     <%= f.label :description, "プロジェクト内容", class: "form-label" %><br />
-    <%= f.text_field :description, class: "form-control", style: "width:250px" %>
+    <%= f.text_area :description, class: "form-control", style: "width:250px" %>
   </div>
   <div class="mb-3">
     <%= f.label :start_date, "開始日", class: "form-label" %><br />
@@ -29,5 +28,7 @@
     <%= f.date_field :end_date, class: "form-control", style: "width:250px" %>
   </div>
   <%= f.submit "作成", class: "btn btn-primary" %>
+  <%= link_to "戻る", :back, class: "btn btn-primary" %>
 <% end %>
+
 </div>
