--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -12,7 +12,7 @@
     <tbody>
       <% @team.members.each do |member| %>
         <tr>
-          <td><%= member.id %></td>
+          <td><%= @count+=1 %></td>
           <td><%= member.name %></td>
           <td><%= member.email %></td>
         </tr>
